Adds meta tag that verifies to Google that we own the domain

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
         <meta name="author" content="Nabla">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<!-- Used by Google to verify that we own the domain. --> 
+	<meta name="google-site-verification" content="lfXfxPU7wQGV0Sd87zCnA_3v0rQlDVQdth3kH_1fzIM" />
+
         <!-- Bootstrap Core CSS -->
         {% addtoblock "css" %}
         <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap.min.css" %}">
