Make image numbering automatic on save
Also fixes some album layout spacing

--- a/contentapps/album/templates/album/album_list.html
+++ b/contentapps/album/templates/album/album_list.html
@@ -18,7 +18,7 @@
         <img class="img-responsive" src="{% thumbnail album.first.file 350x350 crop="smart" %}"/>
         </a>
         {% endif %}
-        <div class="caption">
+        <div class="caption" style="word-wrap: break-word; hyphens: auto;">
             <h3>{{ album.title }}</h3>
         </div>
     </div>
