Flyttet epostlisten til en ny linje for bedre design.

--- a/nablapps/events/templates/events/event_administer.html
+++ b/nablapps/events/templates/events/event_administer.html
@@ -12,7 +12,7 @@
     {% if event.has_queue %}
         Ventende: {{ event.users_waiting }}<br />
     {% endif %}
-    Epostliste:
+    Epostliste: <br />
     <textarea>{% for email in event.users_attending_emails %}{{ email }}; {% endfor %}</textarea>
 </p>
 
