--- a/contentapps/album/templates/album/album_overview.html
+++ b/contentapps/album/templates/album/album_overview.html
@@ -8,6 +8,29 @@
 
 {% block content %}
 <h1>{{ album.title }}</h1>
+
+{% if children %}
+<div class="well">
+{% for row in children|row_split:4 %}
+<div class="row">
+    {% for album in row %}
+    <div class="col-xs-6 col-md-3">
+        <a href="{{ album.get_absolute_url }}">
+        {% if album.visibility != 'u' or is_user%}
+        <a href="{{ album.get_absolute_url }}">
+        <img class="img-responsive" src="{% thumbnail album.first.file 350x350 crop="smart" %}"/>
+        {% endif %}
+        <div class="caption" style="word-wrap: break-word; hyphens: auto;">
+            <h3>{{ album.title }}</h3>
+        </div>
+        </a>
+    </div>
+    {% endfor %}
+</div>
+{% endfor %}
+</div>
+{% endif %}
+
 {% for row in album.images.all|row_split:4 %}
 <div class="row">
     {% for image in row %}
@@ -19,5 +42,10 @@
     {% endfor %}
 </div>
 {% endfor %}
+    <ul class="pager">
+          <li class="previous">
+              <a href="{{ parent_url }}"><span aria-hidden="true">&larr;</span> {{parent_name}}</a>
+          </li>
+    </ul>
 
 {% endblock content %}
