Use newest content
Changes in album

--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@
                                     <li><a href="{% url "nablad_list" %}">Nabladet</a></li>
                                     <li><a href="{% url "season_view" %}">Skråttcast</a></li>
                                     <li><a href="{% url "meeting_record_list" %}">Styremøtereferater</a></li>
-                                    <li><a href="{% url "albums" %}">Bilder</a></li>
+                                    <li><a href="{% url "albums" %}">Bildealbum</a></li>
                                     <li><a href="{% url "blog" %}">Blogg</a></li>
                                     <li><a href="{% url "advent_calendar" "2018" %}">Julekalender 2018</a></li>
                                 </ul>
