--- a/nablapps/officeBeer/templates/officeBeer/deposit.html
+++ b/nablapps/officeBeer/templates/officeBeer/deposit.html
@@ -1,11 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
+<a href="{% url 'officebeer_account' %}">Tilbake til kontoside</a>
 <h2>Sett inn penger</h2>
-<p>Her kan du skrive inn hvor mye du har satt inn via Vipps. Kjellerstyret vil så godkjenne innskuddet når de ser at pengene har gått igjennom.</p>
+<small class="text-muted">Her kan du skrive inn hvor mye du har satt inn via Vipps. Kjellerstyret vil så godkjenne innskuddet når de ser at pengene har gått igjennom.</small>
 <form action="" method="post">
   {% csrf_token %}
   {{ form }}
   <input type="submit" name="submit" value="Send inn"/>
 </form>
+
+<h2>Innskudd som venter på godkjenning:</h2>
+<small class="text-muted">Når et innskudd blir godkjent av kjellerstyret forsvinner innskuddet fra denne siden, og dukker opp på din konto.</small>
+<ul>
+{% for req in deposit_requests %}
+<li>{{ req.created|date:"d b Y" }} - {{ req.amount }}kr.</li>
+{% endfor %}
+</ul>
 {% endblock %}
