Removed 'Offentlig' from download Nabladet button.

--- a/nablapps/nabladet/templates/nabladet/nablad_detail.html
+++ b/nablapps/nabladet/templates/nabladet/nablad_detail.html
@@ -83,7 +83,7 @@
 </a>
 {% else %}
 <a class="btn btn-primary btn-lg btn-block" href="{{ nablad.file.url }}">
-    Last ned Nabladet (offentlig) {{ nablad.pub_date|date:"F Y" }}
+    Last ned Nabladet {{ nablad.pub_date|date:"F Y" }}
 </a>
 {% endif %}
 
