Remove PublicationManager from quiz in interactive

--- a/nablapps/interactive/templates/interactive/quiz_include.html
+++ b/nablapps/interactive/templates/interactive/quiz_include.html
@@ -1,7 +1,7 @@
 {% load markdown %}
 
 <h1>{{ quiz.title }}</h1>
-    {% if not quiz.is_published %}
+    {% if not quiz.published %}
 <div class="alert alert-warning alert-dismissible">Dette er bare synlig fordi du har riktige rettigheter</div>
 {% endif %}
 {% if quiz.is_timed %}
