--- a/nablapps/interactive/templates/interactive/quiz.html
+++ b/nablapps/interactive/templates/interactive/quiz.html
@@ -7,7 +7,7 @@
 
 
 <h1>{{ quiz.title }}</h1>
-    {% if not quiz.is_published %}
+    {% if not quiz.published %}
 <div class="alert alert-warning alert-dismissible">Dette er bare synlig fordi du har riktige rettigheter</div>
 {% endif %}
 {% if quiz.is_timed %}
