--- a/nablapps/exchange/templates/exchange/ex_list.html
+++ b/nablapps/exchange/templates/exchange/ex_list.html
@@ -8,16 +8,18 @@
         <input type="text" name="q" placeholder="" value="{{request.GET.q}}"/>
         <input type="submit" value="Søk"/>
     </form>
-    <p>Her finner du en liste over noen universiteter hvor fysmattere har vært på utveksling:</p>
+    <p>Her finner du en liste over noen universiteter hvor fysmattere har vært på utveksling. Et universitet er krysset under en spesialiseringskolonne dersom minst en fysmatter med gitt spesialisering har studert der (og har registrert dette). Trykk på et universitet for å få opp en liste med studenter som har studert på et gitt universitet. Noen av dem har utvekslingsrapporter fra studenter som har studert der.</p>
+
+    <script src="/static/js/tabel.js" defer></script>
     <div style="overflow: auto">
-        <table class="table">
+        <table class="tabel table" style="border-collapse:separate;">
         <thead>
         <tr>
-            <th>Universitet</th>
+            <th data-header-id="tabel-uni" data-type="string" data-sort-by="uni:asc">Universitet</th>
             {% for retn in retninger %}
-            <th>{{ retn }}</th>
+            <th data-header-id="tabel-{{ retn | slice:'3' }}" data-type="boolean" data-sort-by="{{ retn | slice:'3' }}:asc,uni:asc">{{ retn }}</th>
             {% endfor %}
-            <th>Land</th>
+            <th data-header-id="tabel-country" data-type="string" data-sort-by="country:asc,uni:asc">Land</th>
         </tr>
         </thead>
         <tbody>
