--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,12 @@
         <script src="{% static "bootstrap/dist/js/bootstrap.min.js" %}"></script>
         <script src="{% static "wiki/js/core.js" %}"></script>
         <script src="{% static "js/base.js" %}"></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+        <script type="text/x-mathjax-config">
+            MathJax.Hub.Config({
+              tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+            });
+        </script>
         {% endaddtoblock %}
 
         {% render_block "js-head" %}
@@ -48,6 +54,7 @@
         {% block more_head %}
         {% endblock %}
 
+    </script>
 
     </head>
 
@@ -290,32 +297,4 @@
 {# Obligatory jQuery #}
 {% addtoblock "js-head" %}
 <script src="{% static "jquery/dist/jquery.min.js" %}"></script>
-{% endaddtoblock %}
-
-{# MathJax for LaTeX rendering #}
-{% addtoblock "js" %}
-<script type="text/x-mathjax-config">
- // Differences from standard config:
- //  - $tex$ is allowed.
- //  - LaTeX inside <code> tags now works.
- MathJax.Hub.Config({
-     tex2jax: {
-         skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-         inlineMath: [ ['$','$'], ["\\(","\\)"] ]
-     }
- });
-
- // Hooks the event which is triggered when a Latex equation is rendered, and
- // adds the class .equation to the parent <code> element. This is because
- // Markdown creates code elements around equations.
- MathJax.Hub.Register.MessageHook("New Math", function( message ) {
-     var script = MathJax.Hub.getJaxFor( message[1]).SourceElement();
-     $(script).parent("code").addClass("jax");
- })
-</script>
-
-<script type="text/javascript"
-	      async
-	      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
 {% endaddtoblock %}
