--- a/templates/base.html
+++ b/templates/base.html
@@ -129,8 +129,8 @@
                                     <li><a href="{% url 'show_com_page' slug="styret"%}">Styret</a></li>
                                     {# url for /nablashop/ #}
                                     <li><a href="{% url 'nablashop:index' %}" >Nablashop</a></li>
-				    <li><a href="{% url 'wiki:get' 'diverse/nablas_lover/' %}">Nablas Lover</a></li>
-				    <li><a href="{% url 'wiki:get' 'diverse/nablas_forskrifter/' %}">Nablas Forskrifter</a></li>
+				    <li><a href="{% url 'wiki:get' 'lovverk/nablas_lover/' %}">Nablas Lover</a></li>
+				    <li><a href="{% url 'wiki:get' 'lovverk/nablas_forskrifter/' %}">Nablas Forskrifter</a></li>
 				
 				      
                                     {# Hent alle sider som starter på /om/ #}
