Adds ProKom bank account number

--- a/templates/base.html
+++ b/templates/base.html
@@ -262,9 +262,10 @@
 	                <h2>Informasjon</h2>
 	                <p>
 	                    Organisasjonsnr.: <span class="pull-right">992168544</span><br /><br />
-	                    Hovedkonto: <span class="pull-right">15031357338</span><br />
-	                    Arrkomkonto: <span class="pull-right">15031357400</span><br />
-	                    Gravitoneskonto: <span class="pull-right">15036597965</span><br />
+	                    Hovedkonto: <span class="pull-right">1503.13.57338</span><br />
+	                    Arrkomkonto: <span class="pull-right">1503.13.57400</span><br />
+                      ProKom-konto: <span class="pull-right">1506.19.24172</span><br />
+	                    Gravitoneskonto: <span class="pull-right">1503.65.97965</span><br />
 	                </p>
 	                <h2>Tilbakemelding</h2>
                         <p>
