--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -89,7 +89,7 @@
                     <div class="col-md-3{% if not forloop.first %} hidden-xs{% endif %}">
                         <a class="thumbnail" href="{{ podcast.get_absolute_url }}">
                             {% if podcast.image %}
-                                <img src="{{ podcast.image.url }}" alt="{{ podcast.title }}">
+                                <img src="{% thumbnail podcast.image 730x200 %}" alt="{{ podcast.title }}">
                             {% endif %}
                         </a>
                     </div >
