Get logo from previous season

--- a/nablapps/podcast/templates/podcast/includes/sidebar_include.html
+++ b/nablapps/podcast/templates/podcast/includes/sidebar_include.html
@@ -1,7 +1,7 @@
 
-{% if season.logo %}
+{% if season.smart_logo %}
 <div class="logo-wrapper">
-    <img class="thumbnail" src="{{ season.logo.url }}"/>
+    <img class="thumbnail" src="{{ season.smart_logo.url }}"/>
 </div>
 {% endif %}
 <h2>Kontakte Skråttcast?</h2>
