Add dropdown for season pager

--- a/nablapps/podcast/templates/podcast/season.html
+++ b/nablapps/podcast/templates/podcast/season.html
@@ -50,19 +50,35 @@
 <nav>
     <ul class="pager">
         {% if previous %}
-            <li class="previous">
+            <li>
                 <a href="{{ previous.get_absolute_url }}"><span aria-hidden="true">&larr;</span> Forrige
+                    sesong</a>
+            </li>
+        {% else %}
+             <li style="visibility: hidden">
+                <a><span aria-hidden="true">&larr;</span> Forrige
                     sesong</a>
             </li>
         {% endif %}
 
-        <li class="disabled pager-counter">
-            Sesong {{ season.number }} av {{ season_count }}
+        <li>
+            <div class = "opt">
+                <select onchange="if (this.value) window.location.href=this.value" onmouseover="" style="cursor: pointer;">
+                    {% for i in season_list %}
+                        <option value="{% url "season_view" i.number %}" {% if i == season %} selected {% endif %} >{{ i.name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </li>
 
         {% if next %}
-            <li class="next">
+            <li>
                 <a href="{{ next.get_absolute_url }}">Neste sesong <span
+                        aria-hidden="true">&rarr;</span></a>
+            </li>
+        {% else %}
+            <li style="visibility: hidden">
+                <a>Neste sesong <span
                         aria-hidden="true">&rarr;</span></a>
             </li>
         {% endif %}
