--- a/nablapps/podcast/static/podcast/list.css
+++ b/nablapps/podcast/static/podcast/list.css
@@ -63,3 +63,20 @@
     bottom: 15px;
     float: right;
 }
+
+.opt{
+        border-radius: 15px;
+        color: #337ab7;
+        background-color: #fff;
+        border: 1px solid rgb(221,221,221);
+        padding: 7px;
+        text-align: center;
+        align-items: center;
+        display: inline;
+        margin-right: 0.28em
+    }
+
+select{
+   border:0px;
+   outline:0px;
+}
