--- a/nablapps/podcast/static/podcast/list.css
+++ b/nablapps/podcast/static/podcast/list.css
@@ -69,7 +69,7 @@
     color: #337ab7;
     background-color: #fff;
     border: 1px solid rgb(221,221,221);
-    padding: 7px;
+    padding: 8px;
     text-align: center;
     align-items: center;
     display: inline;
@@ -80,8 +80,5 @@ select{
     border:0px;
     outline:0px;
     padding: 5px 14px;
-}
-
-select-items{
-
+    margin-top: 3px;
 }
