Simplify the admin sidebar thing
Makes the admin-links in the sidebar a list in the context,
rendered using a single included template (sidebar-admin.html).

--- a/templates/content/includes/sidebar-admin.html
+++ b/templates/content/includes/sidebar-admin.html
@@ -1,21 +1,19 @@
-{% if user.is_staff %}
+{% if admin_links and user.is_staff %}
 <div class="panel panel-default">
     <div class="panel-heading">
         Admin
     </div>
     <ul class="nav">
-        {% block sidebar-admin %}
-        {% endblock %}
-        {% if change_url %}
-        <li><a href="{{ change_url }}">
-            <span class="glyphicon glyphicon-pencil"></span>
-            Endre
-        </a></li>
-        <li><a href="{{ delete_url }}">
-            <span class="glyphicon glyphicon-trash"></span>
-            Slett
-        </a></li>
-        {% endif %}
+        {% for link in admin_links %}
+        <li>
+            <a href="{{ link.url }}">
+                {% if link.glyphicon_symbol %}
+                <span class="glyphicon glyphicon-{{ link.glyphicon_symbol }}"></span>
+                {% endif %}
+                {{ link.name }}
+            </a>
+        </li>
+        {% endfor %}
     </ul>
 </div>
 {% endif %}
