Adds latest Scråttcast back to the sidebar.
This was requested by Scråttcast, and is a temporary solution untill we find out how to deal with
the side bar and frontpage layout in general.

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -117,6 +117,15 @@
         </p>
     {% endif %}
 
+    <h2>Nyeste Scråttcast</h2>
+    {% if new_podcast %}
+        <a href="{{ new_podcast.get_absolute_url }}">
+            {% if new_podcast.image %}
+                <img src="{{ new_podcast.image.url }}" alt="{{ new_podcast.title }}" style="max-width: 100%;"/>
+            {% endif %}
+        </a>
+       <p><i>Dato: {{ new_podcast.pub_date | date:"d.m.Y" }}. Antall visninger: ca. {% get_hit_count for new_podcast %}</i></p> 
+    {% endif %}
 
 {% endblock sidebar %}
 
