--- a/nablapps/interactive/templates/interactive/code_golf.html
+++ b/nablapps/interactive/templates/interactive/code_golf.html
@@ -66,7 +66,7 @@ function runit() {
 {{ form.shown_code }}
 <button type="button" onclick="runit()">Run</button> 
 </form> 
-<pre id="output" ></pre> 
+<pre id="output" style="max-height:300px" ></pre> 
 <!-- If you want turtle graphics include a canvas -->
 
 <form method="POST">
