Fant en skrivefeil på forsiden og rettet den fort Skråttkast -> Skråttcast

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -117,7 +117,7 @@
         </p>
     {% endif %}
 
-    <h2>Nyeste Scråttcast</h2>
+    <h2>Nyeste Skråttcast</h2>
     {% if new_podcast %}
         <a href="{{ new_podcast.get_absolute_url }}">
             {% if new_podcast.image %}
