Fixes another skråttcast-typo on the frontpage

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -65,7 +65,7 @@
 
  <ul class="nav nav-tabs">
   <li class="active"><a data-toggle="tab" href="#Nablad">Nablad</a></li>
-  <li><a data-toggle="tab" href="#Podcast">Skråttkast</a></li>
+  <li><a data-toggle="tab" href="#Podcast">Skråttcast</a></li>
 </ul>
 
 <div height=300px class="well">
