Puts the button linking to camera rent page pack in the side bar
Requested by ProKom

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -117,6 +117,8 @@
         </p>
     {% endif %}
 
+	<a class="btn btn-large btn-success" href="/utleie/">Leie filmutstyr til en billig penge?</a> 
+
     <h2>Nyeste Skråttcast</h2>
     {% if new_podcast %}
         <a href="{{ new_podcast.get_absolute_url }}">
